--- a/Curso Vue/DOM/propriedades-reativas-v1.html
+++ b/Curso Vue/DOM/propriedades-reativas-v1.html
@@ -2,6 +2,8 @@
 
 <div id="app">
     <p>{{titulo}}</p>
+    <!-- <input type="text" v-bind:value="titulo" v-on:input="titulo = $event.target.value" > -->
+    <input type="text" v-model="titulo">
 </div>
 
 <script>
